# harpy

./: .eslintrc.json  .prettierignore  .prettierrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: auth.rs  commands.rs  constants.rs  downloader.rs  errors.rs  hasher.rs  main.rs  models.rs  progress.rs  registry.rs  requisites.rs  service.rs  state.rs  tokens.rs  utils.rs
src-tauri/src/errors/: api.rs  auth.rs  commands.rs  download.rs  registry.rs  tokens.rs
src-tauri/src/models/: auth.rs  channel.rs  characters.rs  manifest.rs  wallet.rs
src-tauri/src/palia/: api.rs
src/components/: download.tsx
src/components/buttons/: base-button.tsx  index.ts  install-button.tsx  play-button.tsx  update-button.tsx
src/components/download/: button.tsx  progress-bar.tsx  stat.tsx
src/components/footer/: footer.tsx  link.tsx  links.tsx
src/components/modals/: index.ts  install-modal.tsx  modal-backdrop.tsx  modal.tsx
src/components/news/: index.tsx  news-card.tsx  news-carousel.tsx  news-pagination.tsx
src/components/titlebar/: titlebar.tsx
src/components/titlebar/controlbox/: close-button.tsx  controlbox-button.tsx  index.ts  minimize-button.tsx
src/components/versions/: game.tsx  launcher.tsx  version-wrapper.tsx  versions.tsx
src/hooks/: index.ts  use-contentful.tsx
src/models/: download-progress.ts  index.ts
src/providers/: app-provider.tsx
src/stores/: app-store.tsx  download-store.tsx  index.ts
