[package]
name = "palia-launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "api-all" ] }
serde = { version = "1.0.189", features = [ "derive" ] }
serde_json = "1.0.107"
keyring = "2.0.5"
tokio = "1.33.0"
reqwest = { version = "0.11.22", features = [ "gzip", "json", "stream", "rustls-tls" ] }
url = "2.4.1"
winreg = { version = "0.51.0", features = [ "serialization-serde", "transactions" ] }
lcid = "0.3.0"
current_locale = "0.1.1"
semver = "1.0.20"
whoami = "1.4.1"
futures-util = {version = "0.3.28", features = ["io"] }
async-speed-limit = { version = "0.4.1", features = ["tokio"] }
sha256 = "1.4.0"
parking_lot = "0.12.1"
chrono = "0.4.31"
thiserror = "1.0.50"
flexbuffers = "2.0.0"
hex = "0.4.3"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sys-locale = "0.3.1"
bytes = "1.5.0"
tokio-util = "0.7.9"
human_bytes = { version = "0.4.3", features = ["fast"] }
sysinfo = "0.29.10"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
